--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,8 @@
-
-<h1>Home Page</h1>
-<p>Sample App</p>
+<div class="center hero-unit">
+  <h1>Home Page</h1>
+  <p>Sample App</p>
+  <h2>This is the home page!</h2>
+  <%=link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
+</div>
+<%= link_to image_tag("rails.png", alt:"Rails"), 'http://rubyonrails.org/' %>
  
