--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,8 +1,26 @@
-<div class="center hero-unit">
-  <h1>Home Page</h1>
-  <p>Sample App</p>
-  <h2>This is the home page!</h2>
-  <%=link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
-</div>
-<%= link_to image_tag("rails.png", alt:"Rails"), 'http://rubyonrails.org/' %>
- 
+<% if signed_in? %>
+  <div class="row">
+    <asside class="span4">
+      <section>
+        <%= render 'shared/user_info' %>
+      </section>
+      <section>
+        <%= render 'shared/micropost_form' %>
+      </section>
+    </asside>
+    <div class="span8">
+      <h3>Micropost Feed</h3>
+      <%= render 'shared/feed' %>
+    </div>
+  </div>
+<% else %> 
+  <div class="center hero-unit">
+   <h1>Home Page</h1>
+     <p>Sample App</p>
+	 <h2>This is the home page!</h2>
+	 <%=link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
+   </div>
+   <%= link_to image_tag("rails.png", alt:"Rails"), 'http://rubyonrails.org/' %>
+<% end %>
+
+
