--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,9 +5,14 @@
       <h1>
         <%= gravatar_for @user, "" %>
         <%= @user.name %>
+      </h1>
+    </section>
+    <section>
+      <%= render 'shared/stats' %>
     </section>
   </asside>
   <div class="span8">
+    <%= render 'follow_form' if signed_in? %>
     <% if @user.microposts.any? %>
       <p>Microposts (<%= @user.microposts.count %>)</p>
       <ol class="microposts">
